Deploy preview for PR 42 🛫

--- a/pr-preview/pr-42/search.html
+++ b/pr-preview/pr-42/search.html
@@ -408,7 +408,7 @@ By Graeme A Stewart, Samuel Skipsey
 
   <p class="copyright">
     
-      © Copyright CERN, The Contributors 2025.
+      © Copyright CERN, The Contributors 2023-2025.
       <br/>
     
   </p>
