--- a/pr-preview/pr-42/00-intro.html
+++ b/pr-preview/pr-42/00-intro.html
@@ -511,7 +511,7 @@ By Graeme A Stewart, Samuel Skipsey
 
   <p class="copyright">
     
-      © Copyright CERN, The Contributors 2025.
+      © Copyright CERN, The Contributors 2023-2025.
       <br/>
     
   </p>
