--- a/pr-preview/pr-42/02-julia-intro-installation.html
+++ b/pr-preview/pr-42/02-julia-intro-installation.html
@@ -596,7 +596,7 @@ By Graeme A Stewart, Samuel Skipsey
 
   <p class="copyright">
     
-      © Copyright CERN, The Contributors 2025.
+      © Copyright CERN, The Contributors 2023-2025.
       <br/>
     
   </p>
