--- a/pr-preview/pr-42/09-julia-intro-julia-community.html
+++ b/pr-preview/pr-42/09-julia-intro-julia-community.html
@@ -617,7 +617,7 @@ By Graeme A Stewart, Samuel Skipsey
 
   <p class="copyright">
     
-      © Copyright CERN, The Contributors 2025.
+      © Copyright CERN, The Contributors 2023-2025.
       <br/>
     
   </p>
